# text_comparator

./: .gitignore  README.md  pyproject.toml
tests/: test_diff_viewer.py
tests/code_samples/: code_sample_original.py  code_sample_updated.py
text_comparator/: app.py  diff_viewer.py
