[tool.poetry]
name = "text-comparator"
version = "0.1.0"
description = "A text editor with difference highlighting using PySide6"
authors = ["Tatyana Zatushevskaya <tzatushevskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pyside6 = "6.7.0"
PySide6-Addons = "6.7.0"
PySide6-Essentials = "6.7.0"
shiboken6 = "6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diff_highlighter = "text_comparator.app:cli"